shared-lead-contract/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
</CustomObject>