shared-lead-contract/main/default/objects/Lead/fields/AI_Insights__c.field-meta.xml
<CustomField>
    <fullName>AI_Insights__c</fullName>
    <description>Generated recommendation</description>
    <label>AI Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>