shared-lead-contract/main/default/objects/Lead/fields/AI_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Lead_Score__c</fullName>
    <description>AI prioritization</description>
    <label>AI Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>