shared-lead-contract/main/default/objects/Lead/fields/Application_Usage__c.field-meta.xml
<CustomField>
    <fullName>Application_Usage__c</fullName>
    <description>End use</description>
    <label>Application / Usage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>