shared-lead-contract/main/default/objects/Lead/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <description>Business model</description>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Ingredient Buyer</fullName>
            </value>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Own Brand Distribution</fullName>
            </value>
            <value>
                <fullName>Manufacturing Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>