shared-lead-contract/main/default/objects/Lead/fields/Buying_Intent__c.field-meta.xml
<CustomField>
    <fullName>Buying_Intent__c</fullName>
    <description>Buying stage</description>
    <label>Buying Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Purchase</fullName>
            </value>
            <value>
                <fullName>Future Requirement</fullName>
            </value>
            <value>
                <fullName>R&amp;D Evaluation</fullName>
            </value>
            <value>
                <fullName>Price Comparison</fullName>
            </value>
            <value>
                <fullName>Existing Supplier Review</fullName>
            </value>
            <value>
                <fullName>Information Gathering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>