shared-lead-contract/main/default/objects/Lead/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Track exhibition/campaign</description>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Campaign)</relationshipLabel>
    <relationshipName>Apex_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>