shared-lead-contract/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Business classification</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Importer</fullName>
            </value>
            <value>
                <fullName>Brand Owner</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>