shared-lead-contract/main/default/objects/Lead/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Competitor mapping (kept as text: the org already has this field as text and Salesforce cannot change a field type; a lookup can replace it later)</description>
    <label>Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>