shared-lead-contract/main/default/objects/Lead/fields/Current_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier__c</fullName>
    <label>Current Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>