shared-lead-contract/main/default/objects/Lead/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <description>Response tracking</description>
    <label>Customer Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Future Requirement</fullName>
            </value>
            <value>
                <fullName>Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Requested Sample</fullName>
            </value>
            <value>
                <fullName>Requested Quote</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>