shared-lead-contract/main/default/objects/Lead/fields/Decision_Maker_Identified__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualification</description>
    <label>Decision Maker Identified</label>
    <type>Checkbox</type>
</CustomField>