shared-lead-contract/main/default/objects/Lead/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Contact role</description>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>