shared-lead-contract/main/default/objects/Lead/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <description>Company size</description>
    <label>Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>