shared-lead-contract/main/default/objects/Lead/fields/Estimated_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Volume__c</fullName>
    <description>Potential volume (MT)</description>
    <label>Estimated Annual Volume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>