shared-lead-contract/main/default/objects/Lead/fields/Expected_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Volume__c</fullName>
    <description>Monthly requirement (MT)</description>
    <label>Expected Monthly Volume</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>