shared-lead-contract/main/default/objects/Lead/fields/Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interested Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Interested Leads</relationshipLabel>
    <relationshipName>Interested_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>