shared-lead-contract/main/default/objects/Lead/fields/Lead_Aging__c.field-meta.xml
<CustomField>
    <fullName>Lead_Aging__c</fullName>
    <description>Days since the lead was created (Today - Created Date). 0 on the day of creation.</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>