shared-lead-contract/main/default/objects/Lead/fields/Lead_Classification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Classification__c</fullName>
    <description>Research outcome</description>
    <label>Lead Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Customer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Price Collector</fullName>
            </value>
            <value>
                <fullName>Existing Supplier Customer</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Junk Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>