shared-lead-contract/main/default/objects/Lead/fields/Lead_Health__c.field-meta.xml
<CustomField>
    <fullName>Lead_Health__c</fullName>
    <description>AI insight</description>
    <label>Lead Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>