shared-lead-contract/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>Unique lead reference</description>
    <displayFormat>L-{00000}</displayFormat>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>