shared-lead-contract/main/default/objects/Lead/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>Research information</description>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>