shared-lead-contract/main/default/objects/Lead/fields/Next_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up_Date__c</fullName>
    <label>Next Follow-up Date</label>
    <type>Date</type>
</CustomField>