shared-lead-contract/main/default/objects/Lead/fields/Potential_Rating__c.field-meta.xml
<CustomField>
    <fullName>Potential_Rating__c</fullName>
    <label>Potential Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>