shared-lead-contract/main/default/objects/Lead/fields/Product_Requirement_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Product_Requirement_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Qualification</description>
    <label>Product Requirement Confirmed</label>
    <type>Checkbox</type>
</CustomField>