shared-lead-contract/main/default/objects/Lead/fields/Purchase_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeline__c</fullName>
    <description>Expected buying timeline</description>
    <label>Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>