shared-lead-contract/main/default/objects/Lead/fields/Rating_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rating_Indicator__c</fullName>
    <description>Coloured circle for the standard Rating (Hot = red, Warm = amber, Cold = green). Images come from the Apex_Rating_Indicators static resource so they render in Lightning list views, record pages and the highlights panel.</description>
    <formula>IF(ISPICKVAL(Rating, "Hot"), IMAGE("/resource/Apex_Rating_Indicators/red.png", "Hot", 16, 16), IF(ISPICKVAL(Rating, "Warm"), IMAGE("/resource/Apex_Rating_Indicators/amber.png", "Warm", 16, 16), IF(ISPICKVAL(Rating, "Cold"), IMAGE("/resource/Apex_Rating_Indicators/green.png", "Cold", 16, 16), "")))</formula>
    <label>Rating Indicator</label>
    <type>Text</type>
</CustomField>