shared-lead-contract/main/default/objects/Lead/fields/Reason_for_Switching__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Switching__c</fullName>
    <description>Customer motivation (values: DEMO list, validate with Apex)</description>
    <label>Reason for Switching</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality Issues</fullName>
            </value>
            <value>
                <fullName>Supply Reliability</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Certification / Compliance</fullName>
            </value>
            <value>
                <fullName>Product Range</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>