shared-lead-contract/main/default/objects/Lead/fields/Research_Completed__c.field-meta.xml
<CustomField>
    <fullName>Research_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Research status</description>
    <label>Research Completed</label>
    <type>Checkbox</type>
</CustomField>