shared-lead-contract/main/default/objects/Lead/fields/Research_Notes__c.field-meta.xml
<CustomField>
    <fullName>Research_Notes__c</fullName>
    <description>Research comments</description>
    <label>Research Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>