shared-lead-contract/main/default/objects/Lead/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <description>Sample requirement</description>
    <label>Sample Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>