shared-lead-contract/main/default/objects/Lead/fields/Sample_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Date__c</fullName>
    <description>Sample timeline</description>
    <label>Sample Request Date</label>
    <type>Date</type>
</CustomField>