shared-lead-contract/main/default/objects/Lead/fields/Sample_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Requested</label>
    <type>Checkbox</type>
</CustomField>