shared-lead-contract/main/default/objects/Lead/fields/Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>Volume_Unit__c</fullName>
    <label>Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT</fullName>
                <default>true</default>
                <label>MT</label>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>