shared-lead-contract/main/default/objects/Lead/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <description>Communication</description>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>