shared-lead-contract/main/default/objects/Lead/listViews/Apex_All_Leads.listView-meta.xml
<ListView>
    <fullName>Apex_All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>COMPANY</columns>
    <columns>Rating_Indicator__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Aging__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Apex Leads - All (Rating Indicator)</label>
</ListView>