shared-lead-contract/main/default/objects/Lead/listViews/Apex_Cold_Leads.listView-meta.xml
<ListView>
    <fullName>Apex_Cold_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>COMPANY</columns>
    <columns>Rating_Indicator__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Aging__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Cold</value>
    </filters>
    <label>Cold Leads</label>
</ListView>