shared-lead-contract/main/default/objects/Lead/listViews/Apex_This_Week_Closing.listView-meta.xml
<ListView>
    <fullName>Apex_This_Week_Closing</fullName>
    <columns>FULL_NAME</columns>
    <columns>COMPANY</columns>
    <columns>Rating_Indicator__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Aging__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Next_Followup_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week Closing</label>
</ListView>